--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,34 @@
-name: train
-on: [push]
+name: Python 3.10 Workflow
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  train-lenet-on-MNIST:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Setup Python
+      - name: Checkout code
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4.6.1
         with:
           python-version: 3.10
-          cache: pip
-      - run: python main.py config/example.toml
+
+      - name: Cache dependencies
+        uses: actions/cache@v1.2.1
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run Python script
+        run: python main.py configs/example.toml
