--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name: Train on MNSIT
-
+name: Train on MNIST dataset
 on:
   push:
     branches:
@@ -13,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3.5.2
 
       - name: Set up Python 3.10
@@ -26,21 +25,13 @@ jobs:
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run script and cache datasets directory
         run: |
-          python main.py configs/example.toml
-          mv datasets ${{ runner.workspace }}/datasets
-        env:
-          CACHE_KEY: ${{ runner.os }}-datasets-${{ hashFiles('${{ runner.workspace }}/datasets') }}
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Cache datasets directory
-        uses: actions/cache@v3.2.6
-        with:
-          path: ${{ runner.workspace }}/datasets
-          key: ${{ env.CACHE_KEY }}
-          restore-keys: ${{ runner.os }}-datasets-
+      - name: Train on MNIST Dataset
+        run: python main.py configs/example.toml
