Remove test dataloader and metrics, add patience

--- a/configs/example.toml
+++ b/configs/example.toml
@@ -1,61 +1,33 @@
-[learner]
 # Number of epochs to train for.
-# Default: 0.
+# Default: 0 (i.e. do not train).
 epochs = 5
 
 # Validate model and log metrics on TensorBoard every x epochs.
-# Always validate after last epoch.
 # Default: epochs (i.e. validate only on last epoch).
-val_period = 1
-
-# Save checkpoint every x epochs. Always save after last epoch.
-# Default: epochs (i.e. save only on last epoch).
-# save_period = 2
+validate = 1
 
 # Log training metrics on TensorBoard every x steps.
 # A good value is int(sqrt(baches_per_epoch)).
-# Default: steps (i.e. save only on last step).
-log_period = 8
-
-# TODO: add patience for early stopping
+# Default: steps (i.e. log only on last step).
+log = 8
 
 # Where to save training artefacts (logs, checkpoints, etc.).
-save_path = "experiments/MNIST/"
+# Default: '.' (i.e. save in the current working directory).
+path = "experiments/MNIST/"
 
-# Load model from checkpoint for training or testing.
-# Default: None.
-# load_path = "experiments/MNIST/MonthDay_HourMinute_hash/checkpoints/step.pt"
-
-
-[device]
-# Number of GPUs to use (0, 1, 2, ...). Default: 0 (i.e. use CPU).
+# Number of GPUs to use (0, 1, 2, ...).
+# Default: 0 (i.e. use CPU).
 num_gpus = 0
 
-
-[dataloaders.train]
-# Dataloader imported from `dataloaders` module.
-# `dataloaders.train` is the dataloader used for training.
-class = "MNISTTrainDataLoader"
-path = "datasets/MNIST" # where to find/download the dataset
-batch_size = 512
-num_workers = 2
-
-[dataloaders.val]
-# Dataloader imported from `dataloaders` module.
-# `dataloaders.val` is the dataloader used for validation during training.
-class = "MNISTValDataLoader"
-path = "datasets/MNIST"
-batch_size = 512
-num_workers = 2
-
-[dataloaders.test]
-# Dataloader imported from `dataloaders` module.
-# `dataloaders.test` is the dataloader used for testing after the training.
-# Sometimes the test datasets is the same as the validation dataset.
-class = "MNISTTestDataLoader"
-path = "datasets/MNIST"
-batch_size = 512
-num_workers = 2
+# [patience]
+# Patience values, number of steps before early stopping is triggered.
+# 0 means immidiatly stop if value is getting worst.
+# You can use validation loss/metrics
+# Default: loss = epochs (i.e. never trigger early stopping )
+# Default: your-own-metrics = epochs (i.e. never trigger early stopping)
+# loss = 10
+# accuracy-top-1 = 3
+# accuracy-top-5 = 5
 
 
 [model]
@@ -80,6 +52,22 @@ class = "CosineAnnealingLR"
 T_max = 5
 eta_min = 1e-5
 
+[dataloaders.train]
+# Dataloader imported from `dataloaders` module.
+# `dataloaders.train` is the dataloader used for training.
+class = "MNISTTrainDataLoader"
+path = "datasets/MNIST" # where to find/download the dataset
+batch_size = 512
+num_workers = 2
+
+[dataloaders.val]
+# Dataloader imported from `dataloaders` module.
+# `dataloaders.val` is the dataloader used for validation during training.
+class = "MNISTValDataLoader"
+path = "datasets/MNIST"
+batch_size = 512
+num_workers = 2
+
 [metrics.train.accuracy-top-1]
 # Metric imported from `metrics` module.
 # `metrics.train` are obtaing from `dataloaders.train` dataloader,
@@ -98,11 +86,11 @@ task = "multiclass"
 num_classes = 10
 top_k = 1
 
-[metrics.test.accuracy-top-1]
+[metrics.val.accuracy-top-5]
 # Metric imported from `metrics` module.
-# `metrics.test` are obtaing from `dataloaders.test` dataloader.
-# Are the best metrics for extimating model's performance.
+# `metrics.val` are obtaing from `dataloaders.val` dataloader,
+# and are logged during training. Can be use as proxy for model's performance.
 class = "Accuracy"
 task = "multiclass"
 num_classes = 10
-top_k = 1
+top_k = 5
